// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds like views fetches liked by posts 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "likedBy": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(1)",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(2)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(0)",
}
`;

exports[`pds like views fetches liked by replies 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "likedBy": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(0)",
}
`;
